test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-borrowed.good
init-field-dflt-nonnil-owned-from-nonnil-borrowed.chpl:11: error: cannot initialize 'owned MyClass' from a 'borrowed MyClass'
